# nrl-pulse

./: LICENSE  Makefile  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.github/workflows/: build.yml
scripts/: bump-version.sh
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  ptt.json
src-tauri/icons/: icon.icns
src-tauri/src/: at.rs  audio.rs  audio_aec_mac.rs  audio_aec_win.rs  config.rs  g711.rs  lib.rs  main.rs  models.rs  nrl.rs  platform.rs  runtime.rs  udp.rs
src/lib/: platform.ts  tauri.ts
src/stores/: platform.ts  runtime.ts
