[package]
name = "nrl-pulse"
version = "0.0.1"
description = "Modern cross-platform NRL desktop client"
authors = ["Codex"]
edition = "2021"

[lib]
name = "nrl_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
chrono = "0.4"
cpal = "0.16.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.3.1", features = ["devtools", "macos-private-api"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-opener = "2.2.1"
rubato = "2.0.0"
audioadapter-buffers = "3.0.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
nnnoiseless = "0.5"
