[package]
name = "nrl-pulse"
version = "0.0.8"
description = "Modern cross-platform NRL desktop client"
authors = ["Codex"]
edition = "2021"

[lib]
name = "nrl_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
chrono = "0.4"
cpal = "0.16.0"
dirs = "5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.3.1", features = ["devtools", "macos-private-api"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-opener = "2.2.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rubato = "2.0.0"
audioadapter-buffers = "3.0.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
nnnoiseless = "0.5"
rustfft = "6"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = { version = "0.2", features = ["audio_unit", "audio_toolbox"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
] }
